<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.fragments.RegisterFragment"
    android:background="@color/white_blue">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_form"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_back_black_30"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_registro"
            android:textSize="26sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_header"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:id="@+id/ll_nombre_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_app_2puntos"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/et_nombre_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bg_editText"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:maxLength="30"
                    android:ems="10"
                    android:textAllCaps="true"
                    android:inputType="text"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_recurso_cpu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_recurso_cpu_2puntos"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:id="@+id/et_recurso_cpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bg_editText"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:inputType="number"
                    android:maxLength="30"
                    android:ems="10"
                    android:textAllCaps="true"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_uso_memoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_uso_memoria_2puntos"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                >

                <EditText
                    android:id="@+id/et_uso_memoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/bg_editText"
                    android:padding="8dp"
                    android:inputType="number"
                    android:maxLength="30"
                    android:ems="10"
                    android:textAllCaps="true"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_mb"
                android:layout_marginBottom="2dp"
                android:textSize="18sp"
                />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_precinto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <CheckBox
                android:id="@+id/cb_is_important"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_es_esencial"
                android:textSize="18sp"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_registrar"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_form"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>